single product view

--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -139,13 +139,13 @@
       <main class="col-md-9">
         <header class="border-bottom mb-4 pb-3">
           <div class="form-inline">
-            <span class="mr-md-auto"><b>{{ prodcut.count }}</b> items found </span>
+            <span class="mr-md-auto"><b>{{ products.count }}</b> items found </span>
           </div>
         </header>
         <!-- sect-heading -->
 
         <div class="row">
-          {% for product in prodcuts %}
+          {% for product in products %}
           <div class="col-md-4">
             <figure class="card card-product-grid">
               <div class="img-wrap">
@@ -154,9 +154,7 @@
               <!-- img-wrap.// -->
               <figcaption class="info-wrap">
                 <div class="fix-height">
-                  <a href="./product-detail.html" class="title">{{ prodcut.product_name }}</a>
-                    >Great item name goes here</a
-                  >
+                  <a href="./product-detail.html" class="title">{{ product.product_name }}</a>
                   <div class="price-wrap mt-2">
                     <span class="price">{{ product.price }}</span>
                   </div>
