--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -34,9 +34,13 @@
               <div class="card-body">
                 <ul class="list-menu">
                   <li><a href="{% url 'store' %}">All Products </a></li>
-                 {% for category in links %}
-                  <li><a href="{{ category.get_url }}">{{ category.category_name}}</a></li>
-                 {% endfor %}
+                  {% for category in links %}
+                  <li>
+                    <a href="{{ category.get_url }}"
+                      >{{ category.category_name}}</a
+                    >
+                  </li>
+                  {% endfor %}
                 </ul>
               </div>
               <!-- card-body.// -->
@@ -139,7 +143,9 @@
       <main class="col-md-9">
         <header class="border-bottom mb-4 pb-3">
           <div class="form-inline">
-            <span class="mr-md-auto"><b>{{ products.count }}</b> items found </span>
+            <span class="mr-md-auto"
+              ><b>{{ products.count }}</b> items found
+            </span>
           </div>
         </header>
         <!-- sect-heading -->
@@ -149,12 +155,16 @@
           <div class="col-md-4">
             <figure class="card card-product-grid">
               <div class="img-wrap">
-                <img src="{{ product.images.url }}" />
+                <a href="{{product.get_url }}">
+                  <img src="{{ product.images.url }}"
+                /></a>
               </div>
               <!-- img-wrap.// -->
               <figcaption class="info-wrap">
                 <div class="fix-height">
-                  <a href="./product-detail.html" class="title">{{ product.product_name }}</a>
+                  <a href="{{ product.get_url }}" class="title"
+                    >{{ product.product_name }}</a
+                  >
                   <div class="price-wrap mt-2">
                     <span class="price">{{ product.price }}</span>
                   </div>
