--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -166,7 +166,7 @@
                     >{{ product.product_name }}</a
                   >
                   <div class="price-wrap mt-2">
-                    <span class="price">{{ product.price }}</span>
+                    <span class="price"> ${{ product.price }}</span>
                   </div>
                   <!-- price-wrap.// -->
                 </div>
