--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -1,8 +1,4 @@
-{% extends 'base.html' %} 
-
-{% load static %}
-
-{% block content %}
+{% extends 'base.html' %} {% load static %} {% block content %}
 
 <section class="section-content padding-y bg">
   <div class="container">
@@ -26,7 +22,10 @@
                 <td>
                   <figure class="itemside align-items-center">
                     <div class="aside">
-                      <img src="{{ cart_item.product.images.url }}" class="img-sm" />
+                      <img
+                        src="{{ cart_item.product.images.url }}"
+                        class="img-sm"
+                      />
                     </div>
                     <figcaption class="info">
                       <a href="#" class="title text-dark"
@@ -44,23 +43,29 @@
                   <div class="col">
                     <div class="input-group input-spinner">
                       <div class="input-group-prepend">
-                        <button
+                        <a
+                          href="{% url 'add_cart' cart_item.product.id %}"
                           class="btn btn-light"
                           type="button"
                           id="button-plus"
                         >
                           <i class="fa fa-minus"></i>
-                        </button>
+                        </a>
                       </div>
-                      <input type="text" class="form-control" value="{{ cart_item.quantity }}" />
+                      <input
+                        type="text"
+                        class="form-control"
+                        value="{{ cart_item.quantity }}"
+                      />
                       <div class="input-group-append">
-                        <a href="{% url 'add_cart' cart_item.product.id %}"
+                        <a
+                          href="{% url 'add_cart' cart_item.product.id %}"
                           class="btn btn-light"
                           type="button"
                           id="button-minus"
                         >
                           <i class="fa fa-plus"></i>
-                      </a>
+                        </a>
                       </div>
                     </div>
                     <!-- input-group.// -->
@@ -70,7 +75,9 @@
                 <td>
                   <div class="price-wrap">
                     <var class="price">$ {{ cart_item.sub_total }}</var>
-                    <small class="text-muted"> {{ cart_item.product.price }} each </small>
+                    <small class="text-muted">
+                      {{ cart_item.product.price }} each
+                    </small>
                   </div>
                   <!-- price-wrap .// -->
                 </td>
@@ -94,15 +101,20 @@
             </dl>
             <dl class="dlist-align">
               <dt>Tax:</dt>
-              <dd class="text-right">${{ total }}</dd>
+              <dd class="text-right">${{ tax }}</dd>
             </dl>
             <dl class="dlist-align">
-              <dt>Total:</dt>
-              <dd class="text-right text-dark b"><strong>${{ total }}</strong></dd>
+              <dt>Grand Total:</dt>
+              <dd class="text-right text-dark b">
+                <strong>${{ grand_total }}</strong>
+              </dd>
             </dl>
             <hr />
             <p class="text-center mb-3">
-              <img src="{% static './images/misc/payments.png' %}" height="26" />
+              <img
+                src="{% static './images/misc/payments.png' %}"
+                height="26"
+              />
             </p>
             <a href="./place-order.html" class="btn btn-primary btn-block">
               Checkout
