--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -73,6 +73,15 @@
             <hr />
             {% if single_product.stock <= 0 %}
             <h5 class="text-danger">Out of stock</h5>
+            {% else %} {% if in_cart %}
+            <a href="#" class="btn btn-success">
+              <span class="text">Added to cart</span>
+              <i class="fas fa-check"></i>
+            </a>
+            <a href="{% url 'cart' %}" class="btn btn-outline-primary">
+              <span class="text">View Cart</span>
+              <i class="fas fa-eye"></i>
+            </a>
             {% else %}
             <a
               href="{% url 'add_cart' single_product.id %}"
@@ -81,7 +90,7 @@
               <span class="text">Add to cart</span>
               <i class="fas fa-shopping-cart"></i>
             </a>
-            {% endif %}
+            {% endif %} {% endif %}
           </article>
           <!-- product-info-aside .// -->
         </main>
