--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -54,22 +54,13 @@
               </div>
               <hr />
               {% if single_product.stock <= 0 %}
-              <h5 class="text-danger">Out of stock</h5>
-              {% else %} {% if in_cart %}
-              <a href="#" class="btn btn-success">
-                <span class="text">Added to cart</span>
-                <i class="fas fa-check"></i>
-              </a>
-              <a href="{% url 'cart' %}" class="btn btn-outline-primary">
-                <span class="text">View Cart</span>
-                <i class="fas fa-eye"></i>
-              </a>
+              <h5 class="text-danger">Out of Stock</h5>
               {% else %}
               <button type="submit" class="btn btn-primary">
-                <span class="text">Add to cart</span>
-                <i class="fas fa-shopping-cart"></i>
+                <span class="text">Add to Cart</span>
+                <i class="fa fa-shopping-cart"></i>
               </button>
-              {% endif %} {% endif %}
+              {% endif %}
             </article>
           </form>
           <!-- product-info-aside .// -->
