--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -4,9 +4,7 @@
   <!-- ============================ COMPONENT REGISTER   ================================= -->
   <div class="card mx-auto" style="max-width: 520px; margin-top: 40px">
     <article class="card-body">
-      <header class="mb-4">
-        <h4 class="card-title">Sign up</h4>
-      </header>
+      <header class="mb-4"><h4 class="card-title">Sign up</h4></header>
       <form action="{% url 'register' %}" method="POST">
         {% csrf_token %}
 
@@ -43,7 +41,6 @@
             {{ form.password }}
           </div>
           <!-- form-group end.// -->
-        <div class="form-row"></div>
           <div class="form-group col-md-6">
             <label>Repeat password</label>
             {{form.confirm_password}}
