--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -101,13 +101,16 @@
             <div class="widget-header">
               <small class="title text-muted">Welcome guest!</small>
               <div>
-                <a href="{% url 'login' %}">Sign in</a> <span class="dark-transp"> | </span>
+                <a href="{% url 'login' %}">Sign in</a>
+                <span class="dark-transp"> | </span>
                 <a href="{% url 'register' %}"> Register</a>
               </div>
             </div>
             {% else %}
             <div class="widget-header">
-              <small class="title text-muted">Welcome {{user.first_name}}!</small>
+              <small class="title text-muted"
+                >Welcome {{user.first_name}}!</small
+              >
               <div>
                 <a href="#">Dashboard</a> <span class="dark-transp"> | </span>
                 <a href="{% url 'logout' %}"> Logout</a>
@@ -115,18 +118,22 @@
             </div>
             {% endif %}
             <a href="{% url 'cart' %}" class="widget-header pl-3 ml-3">
-              <div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
-              <span class="badge badge-pill badge-danger notify">{{cart_count}}</span>
+              <div class="icon icon-sm rounded-circle border">
+                <i class="fa fa-shopping-cart"></i>
+              </div>
+              <span class="badge badge-pill badge-danger notify"
+                >{{cart_count}}</span
+              >
             </a>
-  
-          </div> <!-- widgets-wrap.// -->
-  
-        </div> <!-- col.// -->
-  </div> <!-- row.// -->
-    </div> <!-- container.// -->
-  </section> <!-- header-main .// -->
-  
-  
-  
-  
-  </header> <!-- section-header.// -->
+          </div>
+          <!-- widgets-wrap.// -->
+        </div>
+        <!-- col.// -->
+      </div>
+      <!-- row.// -->
+    </div>
+    <!-- container.// -->
+  </section>
+  <!-- header-main .// -->
+</header>
+<!-- section-header.// -->
