--- a/templates/base.html
+++ b/templates/base.html
@@ -53,6 +53,9 @@
     <!-- custom javascript -->
     <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
 
+    <script src="https://www.paypal.com/sdk/js?client-id=Aa_QHWFqZJzogai7077O3ZuNGRZvdO9SjXfbyxtTHDJ-7-1pgPP5-u4iUbfmvl6A0spaEHEwKr10twCg&currency=USD"></script>
+
+
     <script type="text/javascript">
       /// some script
 
